[gd_scene load_steps=14 format=2]

[ext_resource path="res://Interactables/Puzzles/ConnectPath/redLight.png" type="Texture" id=1]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/RectContainer.gd" type="Script" id=2]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/lConnector.png" type="Texture" id=3]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/tConnector.png" type="Texture" id=4]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/iConnector.png" type="Texture" id=5]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/greenLight.png" type="Texture" id=6]
[ext_resource path="res://Interface/WallSwitch/wallSwitch.png" type="Texture" id=7]
[ext_resource path="res://Interactables/Puzzles/ConnectPath/ConnectPath.gd" type="Script" id=8]
[ext_resource path="res://Interactables/HoverInfo/HoverInfo.tscn" type="PackedScene" id=9]
[ext_resource path="res://Interactables/HoverInfo/HoverInfoPuzzles.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15, 15 )

[node name="ConnectPath" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.0627451, 0.152941, 0.235294, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="RectContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -64.0
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="RectContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="RectContainer"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="TextureRect3" type="TextureRect" parent="RectContainer"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="TextureRect4" type="TextureRect" parent="RectContainer"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect5" type="TextureRect" parent="RectContainer"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect6" type="TextureRect" parent="RectContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 64.0
margin_bottom = 64.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 5 )

[node name="TextureRect7" type="TextureRect" parent="RectContainer"]
margin_left = 64.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 64.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="TextureRect8" type="TextureRect" parent="RectContainer"]
margin_left = 96.0
margin_top = 32.0
margin_right = 128.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 1 )

[node name="TextureRect9" type="TextureRect" parent="RectContainer"]
margin_top = 64.0
margin_right = 32.0
margin_bottom = 96.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="TextureRect10" type="TextureRect" parent="RectContainer"]
margin_left = 32.0
margin_top = 64.0
margin_right = 64.0
margin_bottom = 96.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect11" type="TextureRect" parent="RectContainer"]
margin_left = 64.0
margin_top = 64.0
margin_right = 96.0
margin_bottom = 96.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect12" type="TextureRect" parent="RectContainer"]
margin_left = 96.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 96.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect13" type="TextureRect" parent="RectContainer"]
margin_top = 96.0
margin_right = 32.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 6 )

[node name="TextureRect14" type="TextureRect" parent="RectContainer"]
margin_left = 32.0
margin_top = 96.0
margin_right = 64.0
margin_bottom = 128.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect15" type="TextureRect" parent="RectContainer"]
margin_left = 64.0
margin_top = 96.0
margin_right = 96.0
margin_bottom = 128.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 4 )

[node name="TextureRect16" type="TextureRect" parent="RectContainer"]
margin_left = 96.0
margin_top = 96.0
margin_right = 128.0
margin_bottom = 128.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 22.0
margin_bottom = 24.0
texture = ExtResource( 7 )
stretch_mode = 4

[node name="HoverInfo" parent="." instance=ExtResource( 9 )]
script = ExtResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HoverInfo"]
position = Vector2( 112, 42 )
shape = SubResource( 1 )

[node name="HoverInfo4" parent="." instance=ExtResource( 9 )]
script = ExtResource( 13 )

[node name="CollisionShape2D" parent="HoverInfo4" index="0"]
polygon = PoolVector2Array( 194, 27, 223, 27, 224, 56, 194, 57 )

[node name="HoverInfoGroup" type="Node" parent="."]

[node name="HoverInfo2" parent="HoverInfoGroup" instance=ExtResource( 9 )]
script = ExtResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HoverInfoGroup/HoverInfo2"]
position = Vector2( 144, 42 )
shape = SubResource( 2 )

[node name="HoverInfo3" parent="HoverInfoGroup" instance=ExtResource( 9 )]
script = ExtResource( 13 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HoverInfoGroup/HoverInfo3"]
position = Vector2( 176, 42 )
shape = SubResource( 3 )

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]

[editable path="HoverInfo4"]
